kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-demo
  labels:
    app.kubernetes.io/part-of: baremetal-platform-lab
