kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: platform-demo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
