kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: platform-demo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  ingressClassName: traefik
  rules:
    - host: podinfo.lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  name: http
